# fastapi-boilerplate

./: .env_template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
scripts/: start.py  start_dev.py
src/: main.py
src/auth/: dependencies.py  security.py
src/core/: context.py  logger.py  settings.py
src/exceptions/: __init__.py  http_exception.py  internal_server_error.py  rate_limit.py  validation_exception.py
src/middlewares/: __init__.py  auth.py  trace_id.py
src/models/: __init__.py  api_response.py  auth.py
src/routes/: __init__.py  auth.py  error.py  index.py
src/services/: users.py
src/utils/: string_utils.py
tests/: test_main.py
tests/test_auth/: test_dependencies.py  test_security.py
tests/test_core/: test_context.py  test_logger.py  test_security.py
tests/test_exceptions/: test_http_exception.py  test_internal_server_error.py  test_rate_limit.py  test_validation_exception.py
tests/test_middlewares/: test_auth_middleware.py  test_trace_id.py
tests/test_models/: test_auth_model.py
tests/test_routes/: test_auth_route.py  test_error.py  test_index.py
tests/test_services/: test_users.py
tests/test_utils/: test_string_utils.py
